--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -5,10 +5,10 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 
 <BaseLayout title="Projects" sideBarActiveItemID="services">
   <div>
-    <div class="text-3xl w-full font-bold mb-5">Services Header</div>
+    <!-- <div class="text-3xl w-full font-bold mb-5">Services Header</div> -->
   </div>
 
-  <HorizontalCard
+  <!-- <HorizontalCard
     title="Service 1"
     img="/post_img.webp"
     desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
@@ -37,4 +37,4 @@ import HorizontalCard from "../components/HorizontalCard.astro";
     desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
     url="#"
   />
-</BaseLayout>
+</BaseLayout> -->
